[web] [api]  fazendo alterações estruturais
